--- a/src/404.html
+++ b/src/404.html
@@ -22,7 +22,9 @@
 	<meta property="og:locale" content="ru_RU">
 	<meta property="og:url" content="http://localhost:3000/index.html">
 	<meta property="og:title" content="Название">
-	<meta property="og:image" content="http://localhost:3000/img/logo.png">
+	<meta property="og:image" content="http://localhost:3000/apple-touch-icon.png">
+	<meta property="og:image:height" content="256">
+	<meta property="og:image:width" content="256">
 	<meta property="og:description" content="Описание">
 	<meta property="og:site_name" content="Расширенное название">
 	<!--Favicon-->
@@ -45,7 +47,10 @@
 			<div class="max-wrap layout">
 				<div class="header__holder">
 					<!--logo-->
-					<strong class="logo"><a href="index.html">Project Name</a><img style="display: none;" src="img/logo.png" alt="Project Name"></strong>
+					<strong class="logo">
+				<a href="index.html" title="Project Name">Project Name</a>
+				<img style="display: none;" src="img/logo-print.jpg" alt="Project Name">
+			</strong>
 					<!--logo end-->
 					<!--navigation-->
 					<div class="nav-wrap">
