--- a/src/__inner.html
+++ b/src/__inner.html
@@ -17,18 +17,15 @@
 					<div class="content user-content">
 
 						<div class="layout-article">
-							<!--breadcrumbs-->
 							@@include('_tpl_breadcrumbs.html', {
 								"items": ["Главная", "Новости"],
 								"last": "Типографика в вебдизайне. Основные понятия и положения"
 							})
-							<!--breadcrumbs end-->
 
-							<!--heading-->
-							@@include('_tpl_typography_components.html', {
-								"component": "heading"
-							})
-							<!--heading end-->
+							<h1>
+								<span class="mark"></span>
+								Типографика в вебдизайне. Основные понятия и положения
+							</h1>
 
 							<div class="layout-full-width" style="background-color: coral;">
 								<h4>layout-full-width (нет отступов по горизонтали)</h4>
