--- a/src/_tpl_forms_user-form.html
+++ b/src/_tpl_forms_user-form.html
@@ -55,7 +55,7 @@
 			</div>
 			<div class="form-footer">
 				<div class="form-buttons">
-					<button class="btn-default btn-submit" data-label="Отправить">Отправить</button>
+					<button class="btn-default btn-submit">Отправить</button>
 				</div>
 				<div class="form-note">
 					<div class="form-note__item"><span class="form-mark">*</span> Поля обязательны для заполнения</div>
