--- a/src/_tpl_typography_icons-list.html
+++ b/src/_tpl_typography_icons-list.html
@@ -25,6 +25,7 @@
 	@@include("includes/svg/icon-.svg")
 	@@include("includes/svg/icon-send.svg")
 	@@include("includes/svg/icon-arr--sm--left.svg")
+	@@include("includes/svg/icon-print.svg")
 
 	<!--==============================-->
 	@@include('_tpl_title-anchor.html', { "taTag": "h4", "taId": "iconsSoc", "taText": "Социальные иконки" })
