--- a/src/forms.html
+++ b/src/forms.html
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+	<noscript><div class="no-js-warning">Для корректной работы сайта <b>включите JavaScript</b> в браузере</div></noscript>
 	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
@@ -230,7 +231,7 @@
 						<div class="content user-content">
 							<div class="layout-article">
 								<h1>Тестирование элементов форм</h1>
-								<!--form clear-->
+								<!--===============form clear===============-->
 								<h3><a href="#hash-formElementClearExample" id="hash-formElementClearExample" class="hashAnchor"><span class="mark">Поля форм без оберток. Элементы идут один за другим. (рекомендуем)</span></a></h3>
 								<style>
 									form.form-clear>div {
@@ -868,9 +869,9 @@
 										</div>
 									</div>
 								</form>
-								<!--form clear end-->
+								<!--===============form clear end===============-->
 								<div class="user-spacer"></div>
-								<!--form default-->
+								<!--===============form default===============-->
 								<h3><a href="#hash-formElementExample" id="hash-formElementExample" class="hashAnchor"><span class="mark">Поля форм c обертками. (если необходимо)</span></a></h3>
 								<style>
 									form.form-cover>div {
@@ -1562,9 +1563,9 @@
 										</div>
 									</div>
 								</form>
-								<!--form default end-->
+								<!--===============form default end===============-->
 								<div class="user-spacer"></div>
-								<!--checkbox and radio-->
+								<!--===============checkbox and radio===============-->
 								<h3><a href="#hash-formCheckboxExample" id="hash-formCheckboxExample" class="hashAnchor"><span class="mark">Чекбоксы и Радиобаттоны</span></a></h3>
 								<div class="layout-text">
 									<form action="#" method="post">
@@ -1684,9 +1685,9 @@
 										</div>
 									</form>
 								</div>
-								<!--checkbox and radio end-->
+								<!--===============checkbox and radio end===============-->
 								<div class="user-spacer"></div>
-								<!--user form-->
+								<!--===============user form===============-->
 								<h3><a href="#hash-userFormExample" id="hash-userFormExample" class="hashAnchor"><span class="mark">Форма обратной связи</span></a></h3>
 								<div class="user-form">
 									<div class="layout-text">
@@ -1745,7 +1746,7 @@
 											</div>
 											<div class="form-footer">
 												<div class="form-buttons">
-													<button class="btn-default btn-submit" data-label="Отправить">Отправить</button>
+													<button class="btn-default btn-submit">Отправить</button>
 												</div>
 												<div class="form-note">
 													<div class="form-note__item"><span class="form-mark">*</span> Поля обязательны для заполнения</div>
@@ -1754,7 +1755,7 @@
 										</form>
 									</div>
 								</div>
-								<!--user form end-->
+								<!--===============user form end===============-->
 							</div>
 							<script>
 								'use strict';
