--- a/src/inner.html
+++ b/src/inner.html
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+	<noscript><div class="no-js-warning">Для корректной работы сайта <b>включите JavaScript</b> в браузере</div></noscript>
 	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
@@ -229,7 +230,6 @@
 					<div class="content-wrap">
 						<div class="content user-content">
 							<div class="layout-article">
-								<!--breadcrumbs-->
 								<div class="breadcrumbs">
 									<ul class="breadcrumbs__list">
 										<li><a href="#"><span title="Главная">Главная</span></a></li>
@@ -237,12 +237,9 @@
 										<li><span title="Типографика в вебдизайне. Основные понятия и положения">Типографика в вебдизайне. Основные понятия и положения</span></li>
 									</ul>
 								</div>
-								<!--breadcrumbs end-->
-								<!--heading-->
 								<h1>
-									<span class="mark">h1</span> Типографика в вебдизайне. Основные понятия и положения
+									<span class="mark"></span> Типографика в вебдизайне. Основные понятия и положения
 								</h1>
-								<!--heading end-->
 								<div class="layout-full-width" style="background-color: coral;">
 									<h4>layout-full-width (нет отступов по горизонтали)</h4>
 									<p>Современная веб-типографика базируется на CSS-стилях. Меняя значения стилей браузера по умолчанию, можно сделать текстовое содержимое более привлекательным.</p>
