--- a/src/test-mixins.html
+++ b/src/test-mixins.html
@@ -39,6 +39,7 @@
 </head>
 
 <body class="mx-test">
+	<noscript><div class="no-js-warning">Для корректной работы сайта <b>включите JavaScript</b> в браузере</div></noscript>
 	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<link rel="stylesheet" href="css/test-mixins.css">
