--- a/src/typography.html
+++ b/src/typography.html
@@ -273,7 +273,9 @@
 									<span class="mark">h2</span> Забудьте о Comic Sans Представьте, что вы его вообще никогда не видели
 								</h2>
 								<p>Современная веб-типографика базируется на CSS-стилях. Меняя значения стилей браузера по умолчанию, можно сделать текстовое содержимое более привлекательным.</p>
-								<p>В этой статье будут рассмотрены основные аспекты современной веб-типографики, которые помогут вам определиться при выборе шрифта и способов оформления текста.</p>
+								<p>В этой статье будут рассмотрены
+									<основ>
+									</основ>ные аспекты современной веб-типографики, которые помогут вам определиться при выборе шрифта и способов оформления текста.</p>
 								<!--h3-->
 								<h3>
 									<span class="mark">h3</span> Если у вас недостаточно опыта и знаний, даже не пытайтесь использовать необычные, затейливые шрифты. Будьте проще
