--- a/src/typography.html
+++ b/src/typography.html
@@ -915,15 +915,20 @@
 									<div class="images-slider__list">
 										<div class="images-slider__item">
 											<img data-lazy="img/temp/img_1280_01.jpg" src="img/empty.png" alt="Не используйте причудливые шрифты">
+											<div class="caption">Часто текст равняется по ширине. Это значит, что слова в строке расположены соответственно друг другу, и рваного края нет ни с одной стороны.</div>
 										</div>
 										<div class="images-slider__item">
 											<img data-lazy="img/temp/img_1280_02.jpg" src="img/empty.png" alt="Забудьте о Comic Sans">
+											<div class="caption">Такой способ выравнивания модный, так как отзывчивый дизайн научил дизайнеров думать в блоках. Выравнивая текст по ширине, вы получаете непостоянные пробелы и, в худшем случае, в строке оказывается всего несколько слов, что очень раздражает.
+												Проблема с таким текстом усугубляется на мобильных устройствах, и текст становится нечитабельным.</div>
 										</div>
 										<div class="images-slider__item">
 											<img data-lazy="img/temp/img_1280_03.jpg" src="img/empty.png" alt="Не избегайте стандартных, дефолтных шрифтов">
+											<div class="caption">Если опрятность действительно важна для вас, то вам стоит пользоваться знаками переноса, чтобы смягчить рваный край, но никогда не равнять текст по ширине.</div>
 										</div>
 										<div class="images-slider__item">
 											<img data-lazy="img/temp/img_1280_04.jpg" src="img/empty.png" alt="Не используйте одновременно больше двух шрифтов">
+											<div class="caption">Мы также хотим уменьшить контраст между разными уровнями шрифта.</div>
 										</div>
 									</div>
 									<div class="flashes">
@@ -1484,7 +1489,3 @@
 </body>
 
 </html>
-<div class="table-auto">
-	<table id="currentOffer" class="tableOffers">
-	</table>
-</div>
