--- a/src/_tpl_sliders_images-slider--items.html
+++ b/src/_tpl_sliders_images-slider--items.html
@@ -1,3 +1,4 @@
 <div class="images-slider__item">
 	<img data-lazy="img/temp/@@src" src="img/empty.png" alt="@@title">
+	<div class="caption">@@text</div>
 </div>
