--- a/src/typography.html
+++ b/src/typography.html
@@ -915,28 +915,25 @@
 									<div class="images-slider__list">
 										<div class="images-slider__item">
 											<img data-lazy="img/temp/img_1280_01.jpg" src="img/empty.png" alt="Не используйте причудливые шрифты">
+											<noscript class="noscript"><img src="img/temp/img_1280_01.jpg" alt="Не используйте причудливые шрифты"></noscript>
 											<div class="caption">Часто текст равняется по ширине. Это значит, что слова в строке расположены соответственно друг другу, и рваного края нет ни с одной стороны.</div>
 										</div>
 										<div class="images-slider__item">
 											<img data-lazy="img/temp/img_1280_02.jpg" src="img/empty.png" alt="Забудьте о Comic Sans">
+											<noscript class="noscript"><img src="img/temp/img_1280_02.jpg" alt="Забудьте о Comic Sans"></noscript>
 											<div class="caption">Такой способ выравнивания модный, так как отзывчивый дизайн научил дизайнеров думать в блоках. Выравнивая текст по ширине, вы получаете непостоянные пробелы и, в худшем случае, в строке оказывается всего несколько слов, что очень раздражает.
 												Проблема с таким текстом усугубляется на мобильных устройствах, и текст становится нечитабельным.</div>
 										</div>
 										<div class="images-slider__item">
 											<img data-lazy="img/temp/img_1280_03.jpg" src="img/empty.png" alt="Не избегайте стандартных, дефолтных шрифтов">
+											<noscript class="noscript"><img src="img/temp/img_1280_03.jpg" alt="Не избегайте стандартных, дефолтных шрифтов"></noscript>
 											<div class="caption">Если опрятность действительно важна для вас, то вам стоит пользоваться знаками переноса, чтобы смягчить рваный край, но никогда не равнять текст по ширине.</div>
 										</div>
 										<div class="images-slider__item">
 											<img data-lazy="img/temp/img_1280_04.jpg" src="img/empty.png" alt="Не используйте одновременно больше двух шрифтов">
+											<noscript class="noscript"><img src="img/temp/img_1280_04.jpg" alt="Не используйте одновременно больше двух шрифтов"></noscript>
 											<div class="caption">Мы также хотим уменьшить контраст между разными уровнями шрифта.</div>
 										</div>
-									</div>
-									<div class="flashes">
-										<div class="flashes__item">Часто текст равняется по ширине. Это значит, что слова в строке расположены соответственно друг другу, и рваного края нет ни с одной стороны.</div>
-										<div class="flashes__item">Такой способ выравнивания модный, так как отзывчивый дизайн научил дизайнеров думать в блоках. Выравнивая текст по ширине, вы получаете непостоянные пробелы и, в худшем случае, в строке оказывается всего несколько слов, что очень раздражает.
-											Проблема с таким текстом усугубляется на мобильных устройствах, и текст становится нечитабельным.</div>
-										<div class="flashes__item">Если опрятность действительно важна для вас, то вам стоит пользоваться знаками переноса, чтобы смягчить рваный край, но никогда не равнять текст по ширине.</div>
-										<div class="flashes__item">Мы также хотим уменьшить контраст между разными уровнями шрифта.</div>
 									</div>
 								</div>
 								<!--images slider end-->
