--- a/src/_tpl_forms_user-form.html
+++ b/src/_tpl_forms_user-form.html
@@ -8,8 +8,7 @@
 				</div>
 				<div class="input-holder">
 					<input type="text" id="user-form-example__name-field">
-					<span class="error-note">Поле обязательное для заполнения</span>
-					<span class="success-note">&nbsp;</span>
+					@@include('_tpl_forms_form-validation.html')
 				</div>
 			</div>
 			<div class="input-wrap">
@@ -18,8 +17,7 @@
 				</div>
 				<div class="input-holder">
 					<input type="email" id="user-form-example__email-field">
-					<span class="error-note">Поле обязательное для заполнения</span>
-					<span class="success-note">&nbsp;</span>
+					@@include('_tpl_forms_form-validation.html')
 				</div>
 			</div>
 			<div class="input-wrap">
@@ -28,8 +26,7 @@
 				</div>
 				<div class="input-holder">
 					<textarea id="user-form-example__message-field"></textarea>
-					<span class="error-note">Поле обязательное для заполнения</span>
-					<span class="success-note">&nbsp;</span>
+					@@include('_tpl_forms_form-validation.html')
 				</div>
 			</div>
 			<div class="input-wrap">
@@ -49,7 +46,7 @@
 						<img src="img/captcha.jpg" alt="captcha" />
 						<input type="text" id="user-form-example__captcha-field">
 						<span class="error-note">Введите текст на картинке для защиты от спама</span>
-						<span class="success-note">&nbsp;</span>
+						@@include('_tpl_forms_form-validation.html', {"errorNote": "Введите текст на картинке для защиты от спама"})
 					</div>
 				</div>
 			</div>
